# octadocs-adr

./: mkdocs.yml  pyproject.toml
docs/: index.md  install.md  macros.html  team.yaml
docs/customize/: index.md  property.md  status.md
docs/decisions/: 000-use-octadocs-adr.md  001-keep-docs-separate.md  002-dynamically-render-page-properties.md  003-facets.md  004-archived.md  005-rename-to-octadocs-adr.md  006-customize-literal-property-value-display.md  006-draw-sidebar-dynamically.md  007-draw-sidebar-dynamically.md  008-see-also.md  context.yaml  delete-content-when-file-was-deleted.md  index.md  loaders-vs-parsers.md  octiron-must-be-part-of-iolanta.md  plan-ahead.md
docs/decisions/meta/: archived.yaml  see-also.yaml
docs/decisions/properties/: superseded-by.yaml
docs/usage/: describe-authors.md  status.md
octadocs_adr/: macros.py  models.py  plugin.py
octadocs_adr/facets/: __init__.py  adr_list.py  link.py  sidebar.py  status.py  status_class.py
octadocs_adr/templates/octadocs-decisions/: adr-list.html  adr.html
octadocs_adr/yaml/: ctx.yaml  octadocs-adr.yaml  octadocs-decisions.yaml
octadocs_decisions/: macros.py  plugin.py
octadocs_decisions/facets/: __init__.py  default.py  status.py
octadocs_decisions/templates/octadocs-decisions/: adr.html
octadocs_decisions/yaml/: context.yaml  ctx.yaml  octadocs-decisions.yaml
tests/: test_octadocs_decisions.py
